<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tv_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="124dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="28dp"
        android:text="@string/goal"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

        app:layout_constraintEnd_toStartOf="@+id/et_goal"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_goal"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/calories"
        android:inputType="number"
        android:background="@layout/et_rounded_border"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_goal"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_calories_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/calories_left"
        android:textAllCaps="true"

        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/et_calories_left"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_goal" />

    <EditText
        android:id="@+id/et_calories_left"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:gravity="center"
        android:background="@layout/et_rounded_border"
        android:focusable="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_calories_left"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_meal_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@layout/et_rounded_border"
        android:ems="10"
        android:hint="@string/food_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/et_meal_calories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_calories_left" />

    <EditText
        android:id="@+id/et_meal_calories"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/calories"
        android:inputType="number"
        android:background="@layout/et_rounded_border"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_meal_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_meal"
        android:layout_width="44dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="120dp"
        android:elevation="0dp"
        android:scaleType="center"
        android:src="@drawable/ic_add_white"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_meal_name" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="72dp"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

    </android.support.v7.widget.RecyclerView>


    <Button
        android:id="@+id/btn_clear"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_rounded_corners"
        android:text="@string/clear"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>